--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 STRIPE_PUBLISHABLE_KEY=your_test_key_here
 STRIPE_SECRET_KEY=your_test_key_here
+ADMIN_USERNAME=user_name_for_admin
+ADMIN_PASSWORD=password_for_admin
